Se realizan metodos de enpoint 3 y 4